--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Joseph Arellano",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "assert": "^1.4.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.7"
   }
 }
